--- a/second.html
+++ b/second.html
@@ -19,10 +19,7 @@
     var listMobil = ["Avanza", "Agya", "Ayla"];
     console.log(listMobil);
     // console.log(typeof listMobil);
-    var mobilAvanza = {
-      namaMobil: "Avanza",
-      merek: "Daihatsu"
-    };
+    var mobilAvanza = {namaMobil: "Avanza", merek: "Daihatsu"};
     console.log(mobilAvanza);
     // console.log(typeof mobilAvanza);
   </script>
