Mencoba While Loop

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 <body>
   <div id="datanya"></div>
   <script>
-    // Mencoba For
+    // Mencoba For Loop
     for (i = 0; i < 5; i++) {
-      console.log("Saya bernilai " + i);
+      console.log("For: Saya bernilai " + i);
+    }
+
+    // Mencoba While Loop
+    var j = 0;
+    while (j < 5) {
+      console.log("While: Saya bernilai " + j);
+      j++;
     }
   </script>
 </body>
