--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       console.log("While: Saya bernilai " + j);
       j++;
     }
+
+    // Mencoba Do While Loop
+    var h = 0;
+    do {
+      console.log("Do while: Saya bernilai " + h);
+      h++;
+    } while (h < 5);
   </script>
 </body>
 
