--- a/five.html
+++ b/five.html
@@ -11,13 +11,26 @@
 <body>
   <div id="datanya"></div>
   <script>
+    // Mencoba Pengkondisian If Else
     var lampu = 1;
 
-    // Mencoba Pengkondisian If Else
     if (lampu == 1) {
       console.log("Lampu nyala");
     } else {
       console.log("Lampu mati");
+    }
+
+    // Mencoba Pengkondisian If Else If Else
+    var lampu2 = "merah";
+
+    if (lampu2 == "merah") {
+      console.log("Lampu nyala warna merah");
+    } else if (lampu2 == "kuning") {
+      console.log("Lampu nyala warna kuning");
+    } else if (lampu2 == hijau) {
+      console.log("Lampu nyala warna hijau");
+    } else {
+      console.log("Tidak ada warna lampu tersebut");
     }
   </script>
 </body>
