Mencoba Pengkondisian Switch Case

--- a/five.html
+++ b/five.html
@@ -32,6 +32,23 @@
     } else {
       console.log("Tidak ada warna lampu tersebut");
     }
+
+    // Mencoba Pengkondisian Switch Case
+    lampu2 = "pink";
+
+    switch (lampu2) {
+      case "merah":
+        console.log("Lampu nyala warna merah");
+        break;
+      case "kuning":
+        console.log("Lampu nyala warna kuning");
+        break;
+      case "hijau":
+        console.log("Lampu nyala warna hijau");
+        break;
+      default:
+        console.log("Tidak ada warna lampu tersebut");
+    }
   </script>
 </body>
 
