Mencoba JS DOM dan Menulis ke HTML
document.getElementById("datanya").innerHtml = "//data";

--- a/five.html
+++ b/five.html
@@ -39,15 +39,19 @@
     switch (lampu2) {
       case "merah":
         console.log("Lampu nyala warna merah");
+        document.getElementById("datanya").innerHTML = "Lampu nyala warna merah";
         break;
       case "kuning":
         console.log("Lampu nyala warna kuning");
+        document.getElementById("datanya").innerHTML = "Lampu nyala warna kuning";
         break;
       case "hijau":
         console.log("Lampu nyala warna hijau");
+        document.getElementById("datanya").innerHTML = "Lampu nyala warna hijau";
         break;
       default:
         console.log("Tidak ada warna lampu tersebut");
+        document.getElementById("datanya").innerHTML = "Tidak ada warna lampu tersebut";
     }
   </script>
 </body>
