Set Text yang Ada di li Menjadi Indonesia

--- a/CPL/Jquery/second.html
+++ b/CPL/Jquery/second.html
@@ -21,6 +21,7 @@
     // Akan Dijalankan Setelah Dokumen Siap
     $("document").ready(function () {
       console.log("Jquery Sudah Jalan");
+      $("li").text("Indonesia");
     });
   </script>
 </body>
