Mencoba Set Text Ke Element Class

--- a/CPL/Jquery/second.html
+++ b/CPL/Jquery/second.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Kemana kamu ingin pergi?</h1>
   <ul>
-    <li>Bandung</li>
+    <li class="korea">Bandung</li>
     <li>Sukabumi</li>
     <li>Yogyakarta</li>
   </ul>
@@ -22,6 +22,7 @@
     $("document").ready(function () {
       console.log("Jquery Sudah Jalan");
       $("li").text("Indonesia");
+      $(".korea").text("Korea Selatan");
     });
   </script>
 </body>
