Mencoba Effect Hide dengan slideUp

--- a/CPL/Jquery/six.html
+++ b/CPL/Jquery/six.html
@@ -38,7 +38,7 @@
       });
 
       $("#hideBandung").on("click", function () {
-        $(".bandung").fadeOut();
+        $(".bandung").slideUp();
       });
     });
   </script>
