Mencoba Mengubah Nilai Variabel Let

--- a/DCD/Javascript/first.html
+++ b/DCD/Javascript/first.html
@@ -15,6 +15,8 @@
     // Let itu bisa diubah seudah diinisiasi
     let nama = "Ikram Maulana";
     console.log(nama);
+    nama = "Linda";
+    console.log(nama)
 
     // const tidak bisa bisa diubah seudah diinisiasi
   </script>
