Mencoba Inisiasi Variabel dengan Const

--- a/DCD/Javascript/first.html
+++ b/DCD/Javascript/first.html
@@ -19,6 +19,10 @@
     console.log(nama)
 
     // const tidak bisa bisa diubah seudah diinisiasi
+    const name = "Dicoding";
+    console.log(name);
+    name = "Academy";
+    console.log(name);
   </script>
 </body>
 
