Menambahkan Keterangan untuk Const

--- a/DCD/Javascript/first.html
+++ b/DCD/Javascript/first.html
@@ -21,6 +21,7 @@
     // const tidak bisa bisa diubah seudah diinisiasi
     const name = "Dicoding";
     console.log(name);
+    // Akan error karena const tidak dapat diubah
     name = "Academy";
     console.log(name);
   </script>
