Mencoba Menambahkan Tipe Data Number

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -15,6 +15,12 @@
     // 1. Undefined
     let score;
     console.log(typeof (score));
+
+    // 2. Number
+    let age = 24;
+    console.log(typeof (age));
+    let height = 165.3;
+    console.log(typeof (height));
   </script>
 </body>
 
