Mencoba Menambahkan Operator di Tipe Data Number

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -21,6 +21,14 @@
     console.log(typeof (age));
     let height = 165.3;
     console.log(typeof (height));
+    // Operasi di Number
+    let a = 7;
+    let b = 5;
+    console.log(a * b);
+    console.log(a / b);
+    console.log(a + b);
+    console.log(a - b);
+    console.log(a % b);
   </script>
 </body>
 
