Mencoba Increment dan Decrement, Postfix dan Prefix

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -29,6 +29,13 @@
     console.log(a + b);
     console.log(a - b);
     console.log(a % b);
+    // Operator Increment dan Decrement
+    let postfix = 5;
+    console.log("Hasil dari postfix++ adalah ", postfix++); //5
+    console.log("Sehingga, nilai dari postfix saat ini adalah ", postfix); //6
+    let prefix = 5;
+    console.log("Hasil dari ++prefix adalah ", ++prefix); //6
+    console.log("Sehingga, nilai dari prefix saat ini adalah ", prefix); //6
   </script>
 </body>
 
