Mencoba Menambahkan Tipe Data String

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -36,6 +36,11 @@
     let prefix = 5;
     console.log("Hasil dari ++prefix adalah ", ++prefix); //6
     console.log("Sehingga, nilai dari prefix saat ini adalah ", prefix); //6
+
+    // 3. String
+    let name = "Amalia";
+    console.log(typeof (name));
+    
   </script>
 </body>
 
