Mencoba Tanda Petik di dalam Tanda Petik

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -40,7 +40,10 @@
     // 3. String
     let name = "Amalia";
     console.log(typeof (name));
-    
+    // Tanda Petik dalam Tanda Petik
+    const question = '"What do you think of JavaScript?" he asked';
+    console.log(question)
+    /* output: "What do you think of JavaScript?" he asked */
   </script>
 </body>
 
