Mencoba Escape String
menambahkan backslash untuk meminimalisir ambiguitas

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -44,6 +44,9 @@
     const question = '"What do you think of JavaScript?" he asked';
     console.log(question)
     /* output: "What do you think of JavaScript?" he asked */
+    // Mencoba Escape String
+    const answer = '"I think i\'ts great" i answered';
+    console.log(answer);
   </script>
 </body>
 
