Mencoba Menambahkan Tipe Data Boolean

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -47,6 +47,12 @@
     // Mencoba Escape String
     const answer = '"I think i\'ts great" i answered';
     console.log(answer);
+
+    // 4. Boolean
+    let x = true;
+    let y = false;
+    console.log(typeof (x))
+    console.log(typeof (y))
   </script>
 </body>
 
