Contoh Penggunaan Tipe Data Boolean

--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -53,6 +53,15 @@
     let y = false;
     console.log(typeof (x))
     console.log(typeof (y))
+    // Atau
+    const c = 10;
+    const d = 12;
+
+    let isGreater = c > d;
+    let isLess = c < d;
+
+    console.log(isGreater);
+    console.log(isLess);
   </script>
 </body>
 
