--- a/DCD/Javascript/second.html
+++ b/DCD/Javascript/second.html
@@ -62,6 +62,10 @@
 
     console.log(isGreater);
     console.log(isLess);
+
+    // 5. Null
+    let someLaterData = null;
+    console.log(someLaterData);
   </script>
 </body>
 
