--- a/DCD/Javascript/five.html
+++ b/DCD/Javascript/five.html
@@ -18,7 +18,14 @@
     if (totalBelanja > 100000 && jenisMember == "Silver") {
       console.log("Selamat, Anda mendapatkan diskon sebesar 10%");
     } else {
-      console.log("Maaf, saat ini anda belum mendapatkan diskon");
+      console.log("Maaf, saat ini Anda belum mendapatkan diskon");
+    }
+
+    // Mencoba Operator ||
+    if (totalBelanja > 100000 || jenisMember == "Silver") {
+      console.log("Selamat, Anda mendapatkan diskon sebesar 10%");
+    } else {
+      console.log("Maaf, saat ini Anda belum mendapatkan diskon");
     }
   </script>
 </body>
