Mencoba Variabel String

--- a/UDM/Javascript/first.html
+++ b/UDM/Javascript/first.html
@@ -18,6 +18,10 @@
 
     var sum = num1 + num2 + num3;
     console.log(sum);
+
+    // Mencoba Variabel String
+    var name = "Ikram Maulana";
+    console.log(name);
   </script>
 </body>
 
