Mencoba Clear Console

--- a/UDM/Javascript/first.html
+++ b/UDM/Javascript/first.html
@@ -11,6 +11,9 @@
 <body>
 
   <script>
+    // Mencoba console clear
+    console.clear();
+
     // Mencoba Variabel Number
     var num1 = 3;
     var num2 = 5;
